syntax = "proto3";
package supsidacdisaac.ds.ds;

import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "ds/signal.proto";
// this line is used by starport scaffolding # 1
import "gogoproto/gogo.proto";

option go_package = "github.com/supsi-dacd-isaac/cosmos-dstreppa/ds/x/ds/types";

// Query defines the gRPC querier service.
service Query {
    // Queries a signal by index.
	rpc Signal(QueryGetSignalRequest) returns (QueryGetSignalResponse) {
		option (google.api.http).get = "/supsi-dacd-isaac/ds/ds/signal/{index}";
	}

	// Queries a list of signal items.
	rpc SignalAll(QueryAllSignalRequest) returns (QueryAllSignalResponse) {
		option (google.api.http).get = "/supsi-dacd-isaac/ds/ds/signal";
	}

// this line is used by starport scaffolding # 2
}

message QueryGetSignalRequest {
	  string index = 1;

}

message QueryGetSignalResponse {
	Signal signal = 1 [(gogoproto.nullable) = false];
}

message QueryAllSignalRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllSignalResponse {
	repeated Signal signal = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// this line is used by starport scaffolding # 3
